--- a/phpunit.xml.dist
+++ b/phpunit.xml.dist
@@ -1,6 +1,8 @@
 <?xml version="1.0" encoding="UTF-8"?>
-
 <phpunit bootstrap="./Tests/bootstrap.php" colors="true" forceCoversAnnotation="false">
+    <php>
+        <server name="KERNEL_DIR" value="Tests/Fixtures/app" />
+    </php>
     <testsuites>
         <testsuite name="UtilBundle test suite">
             <directory suffix="Test.php">./Tests</directory>
