--- a/.travis.yml
+++ b/.travis.yml
@@ -2,11 +2,10 @@ language: php
 
 php:
     - 5.5
-    - 5.4
-    - 5.3
 
 env:
     - SYMFONY_VERSION=2.6.*
+    - SYMFONY_VERSION=2.8.*
 
 before_script: composer install --dev
 
