--- a/composer.json
+++ b/composer.json
@@ -13,30 +13,30 @@
     ],
 
     "require": {
-        "php":                              ">=5.3.2",
-        "symfony/finder":                   ">=2.0.16,~2.0",
-        "symfony/filesystem":               ">=2.0.16,~2.0",
-        "symfony/framework-bundle":         ">=2.0.16,~2.0",
+        "php":                              ">=5.5.0",
+        "symfony/finder":                   ">=2.6.0,~2.0",
+        "symfony/filesystem":               ">=2.6.0,~2.0",
+        "symfony/framework-bundle":         ">=2.6.0,~2.0",
         "symfony/twig-bundle":              "*",
         "twig/twig":                        ">=1.0,<2.0-dev",
         "sensio/framework-extra-bundle":    "*",
-        "symfony/validator":                "~2.6.0",
-        "symfony/translation":              "~2.6.0",
-        "symfony/form":                     "~2.6.0",
-        "symfony/console":                  "~2.6.0"
+        "symfony/validator":                ">=2.6.0,~2.0",
+        "symfony/translation":              ">=2.6.0,~2.0",
+        "symfony/form":                     ">=2.6.0,~2.0",
+        "symfony/console":                  ">=2.6.0,~2.0"
     },
 
     "require-dev": {
-        "symfony/yaml":             "~2.6.0",
+        "symfony/yaml":             ">=2.6.0,~2.0",
         "phpunit/phpunit":          "4.5.*@dev",
         "satooshi/php-coveralls":   "0.7.*@dev",
-        "symfony/browser-kit":      "~2.6.0",
-        "symfony/routing":          "~2.6.0"
+        "symfony/browser-kit":      ">=2.6.0,~2.0",
+        "symfony/routing":          ">=2.6.0,~2.0"
     },
 
     "autoload": {
         "psr-0": { "tps\\UtilBundle": "" }
     },
 
-    "target-dir": "tps/UtilBundle"
+    "target-dir": "tps/util-bundle"
 }
