--- a/.travis.yml
+++ b/.travis.yml
@@ -2,10 +2,13 @@ language: php
 
 php:
     - 5.5
+    - 5.4
 
 env:
+    - SYMFONY_VERSION=2.3.*
     - SYMFONY_VERSION=2.6.*
     - SYMFONY_VERSION=2.8.*
+    - SYMFONY_VERSION=3.0.*
 
 before_script: composer install --dev
 
