--- a/Tests/Fixtures/app/config/default.yml
+++ b/Tests/Fixtures/app/config/default.yml
@@ -17,5 +17,5 @@ twig:
     debug:            %kernel.debug%
     strict_variables: %kernel.debug%
 
-parameters:
-    fragment.renderer.hinclude.class: Symfony\Component\HttpKernel\Fragment\HIncludeFragmentRenderer
+#parameters:
+#    fragment.renderer.hinclude.class: Symfony\Component\HttpKernel\Fragment\HIncludeFragmentRenderer
