--- a/composer.json
+++ b/composer.json
@@ -35,7 +35,10 @@
     },
 
     "autoload": {
-        "psr-0": { "tps\\UtilBundle": "" }
+        "psr-0": { "tps\\UtilBundle": "" },
+        "classmap": [
+            "Tests/Fixtures"
+        ]
     },
 
     "target-dir": "tps/util-bundle"
