changed autoload to use PSR-4, removed target-dir config

--- a/composer.json
+++ b/composer.json
@@ -35,11 +35,9 @@
     },
 
     "autoload": {
-        "psr-0": { "Tps\\UtilBundle": "" },
+        "psr-4": { "Tps\\UtilBundle\\": "" },
         "classmap": [
             "Tests/Fixtures"
         ]
-    },
-
-    "target-dir": "Tps/UtilBundle"
+    }
 }
