--- a/Tests/Fixtures/app/config/default.yml
+++ b/Tests/Fixtures/app/config/default.yml
@@ -1,7 +1,7 @@
 framework:
     secret:        test
     csrf_protection:
-        enabled: true
+        enabled: false
     router:        { resource: "%kernel.root_dir%/config/routing.yml" }
     validation:    { enabled: true, enable_annotations: true }
     form: ~
@@ -11,6 +11,7 @@ framework:
         storage_id:     session.storage.mock_file
     profiler:      { only_exceptions: false }
     templating:    { engines: ['twig'] }
+    assets: false
 
 # Twig Configuration
 twig:
