--- a/composer.json
+++ b/composer.json
@@ -23,12 +23,13 @@
         "symfony/validator":                ">=2.3.0",
         "symfony/translation":              ">=2.3.0",
         "symfony/form":                     ">=2.3.0",
-        "symfony/console":                  ">=2.3.0"
+        "symfony/console":                  ">=2.3.0",
+        "symfony/templating": "^3.1"
     },
 
     "require-dev": {
         "symfony/yaml":             ">=2.3.0",
-        "phpunit/phpunit":          "4.5.*@dev",
+        "phpunit/phpunit":          "~5.6",
         "satooshi/php-coveralls":   "0.7.*@dev",
         "symfony/browser-kit":      ">=2.3.0",
         "symfony/routing":          ">=2.3.0"
