--- a/.travis.yml
+++ b/.travis.yml
@@ -5,12 +5,15 @@ php:
     - 5.5
     - 5.4
     - 7.0
+    - 7.1
 
 env:
     - SYMFONY_VERSION=2.3.*
     - SYMFONY_VERSION=2.6.*
     - SYMFONY_VERSION=2.8.*
     - SYMFONY_VERSION=3.0.*
+    - SYMFONY_VERSION=3.1.*
+    - SYMFONY_VERSION=3.2.*
 
 before_script: composer install --dev
 
