--- a/composer.json
+++ b/composer.json
@@ -29,7 +29,7 @@
 
     "require-dev": {
         "symfony/yaml":             ">=2.3.0",
-        "phpunit/phpunit":          "~5.6",
+        "phpunit/phpunit":          ">=4.8.0",
         "satooshi/php-coveralls":   "0.7.*@dev",
         "symfony/browser-kit":      ">=2.3.0",
         "symfony/routing":          ">=2.3.0"
