--- a/composer.json
+++ b/composer.json
@@ -24,7 +24,7 @@
         "symfony/translation":              ">=2.3.0",
         "symfony/form":                     ">=2.3.0",
         "symfony/console":                  ">=2.3.0",
-        "symfony/templating": "^3.1"
+        "symfony/templating": ">=3.1.0"
     },
 
     "require-dev": {
