--- a/composer.json
+++ b/composer.json
@@ -14,25 +14,25 @@
 
     "require": {
         "php":                              ">=5.4.0",
-        "symfony/finder":                   ">=2.3.0",
-        "symfony/filesystem":               ">=2.3.0",
-        "symfony/framework-bundle":         ">=2.3.0",
-        "symfony/twig-bundle":              ">=2.3.0",
+        "symfony/finder":                   ">=2.3.0|~3|~4",
+        "symfony/filesystem":               ">=2.3.0|~3|~4",
+        "symfony/framework-bundle":         ">=2.3.0|~3|~4",
+        "symfony/twig-bundle":              ">=2.3.0|~3|~4",
         "twig/twig":                        ">=1.0,~1.0",
-        "sensio/framework-extra-bundle":    ">=2.3.0",
-        "symfony/validator":                ">=2.3.0",
-        "symfony/translation":              ">=2.3.0",
-        "symfony/form":                     ">=2.3.0",
-        "symfony/console":                  ">=2.3.0",
-        "symfony/templating": ">=3.1.0"
+        "sensio/framework-extra-bundle":    ">=2.3.0|~3|~4",
+        "symfony/validator":                ">=2.3.0|~3|~4",
+        "symfony/translation":              ">=2.3.0|~3|~4",
+        "symfony/form":                     ">=2.3.0|~3|~4",
+        "symfony/console":                  ">=2.3.0|~3|~4",
+        "symfony/templating": ">=3.1.0|~4"
     },
 
     "require-dev": {
-        "symfony/yaml":             ">=2.3.0",
-        "phpunit/phpunit":          ">=4.8.0",
+        "symfony/yaml":             ">=2.3.0|~3|~4",
+        "phpunit/phpunit":          ">=4.8.0|~5|~6",
         "satooshi/php-coveralls":   "0.7.*@dev",
-        "symfony/browser-kit":      ">=2.3.0",
-        "symfony/routing":          ">=2.3.0"
+        "symfony/browser-kit":      ">=2.3.0|~3|~4",
+        "symfony/routing":          ">=2.3.0|~3|~4"
     },
 
     "autoload": {
